--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -1,24 +1,21 @@
 ---
-import {type APISpaceXResponse} from "../types/api"
+import CardLaunches from "./CardLaunches.astro";
+import { getLatestLaunches } from "../api/spacex";
 
-    const rest = await fetch('https://api.spacexdata.com/v5/launches/query', {
-        method : 'POST',
-        headers : {
-            "Content-Type":"application/json"
-        },
-        body : JSON.stringify({
-            query : {},
-            options : {
-                sort : {
-                    date_unix : 'asc'
-                },
-                limit : 12,
-            },
-        }),
-    });
-    const { docs } = (await rest.json()) as APISpaceXResponse
+const launches = await getLatestLaunches();
+
 ---
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-
+  {
+    launches.map((launche) => (
+      <CardLaunches 
+        id={launche.id}
+        img={launche.links.patch.small}
+        details={launche.details}
+        flightNUmber={launche.flight_number}
+        success={launche.success}
+      />
+    ))
+  }
 </div>
